--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Enhanced SEO and Social Sharing Meta Tags -->
-    <title>NeuraFit - #1 AI Workout Generator | Personalized Fitness Plans 2024</title>
+    <title>neurafit</title>
     <meta name="description" content="🏋️ Get AI-powered workout plans in 30 seconds! Personalized for your goals, equipment & fitness level. Join 10,000+ users transforming their fitness with smart training plans. Free trial!" />
     <meta name="keywords" content="AI workout generator, personalized fitness app, custom workout plans, AI fitness trainer, smart exercise planner, adaptive training program, fitness AI, workout builder, personal trainer app, strength training AI, cardio workouts, home gym workouts, fitness goals tracker, exercise routine generator, intelligent fitness coaching" />
     <meta name="author" content="NeuraFit Team" />
