Optimize loading animation timing and replace progress bar with futuristic spinner
- Tested workout generation API (avg response time: 17.5s)
- Adjusted loading message interval from 2s to 3.5s to match API timing
- Replaced progress bar with innovative multi-ring spinner with orbiting particles
- Added development logging for animation timing debugging
- Fixed index.html script tag to remove hardcoded query parameters
- Cleaned up temporary documentation files

--- a/index.html
+++ b/index.html
@@ -306,6 +306,6 @@
 
     <!-- Firebase is now loaded directly in the main bundle -->
 
-    <script type="module" src="/src/main.tsx?v=1.0.1759196986&t=1759196986"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
