--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
     <!-- Enhanced Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://neurafit-ai-2025.web.app/" />
+    <meta property="og:url" content="https://neurastack.ai/" />
     <meta property="og:title" content="NeuraFit - #1 AI Workout Generator | Get Fit with Smart Training" />
     <meta property="og:description" content="🏋️ Transform your fitness with AI-powered workout plans! Personalized training in 30 seconds. Join 10,000+ users getting stronger with intelligent fitness coaching. Try free!" />
-    <meta property="og:image" content="https://neurafit-ai-2025.web.app/android-chrome-512x512.png" />
+    <meta property="og:image" content="https://neurastack.ai/android-chrome-512x512.png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="NeuraFit AI Workout Generator - Personalized Fitness App" />
@@ -105,10 +105,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@neurafit" />
     <meta name="twitter:creator" content="@neurafit" />
-    <meta name="twitter:url" content="https://neurafit-ai-2025.web.app/" />
+    <meta name="twitter:url" content="https://neurastack.ai/" />
     <meta name="twitter:title" content="NeuraFit - #1 AI Workout Generator | Smart Fitness Training" />
     <meta name="twitter:description" content="🏋️ Get personalized AI workouts in 30 seconds! Smart training plans for your goals & equipment. Join 10,000+ users transforming their fitness. Free trial!" />
-    <meta name="twitter:image" content="https://neurafit-ai-2025.web.app/android-chrome-512x512.png" />
+    <meta name="twitter:image" content="https://neurastack.ai/android-chrome-512x512.png" />
     <meta name="twitter:image:alt" content="NeuraFit AI Workout Generator - Personalized Fitness Training App" />
     <meta name="twitter:app:name:iphone" content="NeuraFit" />
     <meta name="twitter:app:id:iphone" content="neurafit-ios-id" />
@@ -120,7 +120,7 @@
     <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://neurafit-ai-2025.web.app/" />
+    <link rel="canonical" href="https://neurastack.ai/" />
 
     <!-- Structured Data (JSON-LD) for SEO -->
     <script type="application/ld+json">
@@ -130,7 +130,7 @@
       "name": "NeuraFit",
       "alternateName": "NeuraFit AI Workout Generator",
       "description": "AI-powered personalized workout generator that creates custom fitness plans tailored to your goals, experience level, and available equipment.",
-      "url": "https://neurafit-ai-2025.web.app/",
+      "url": "https://neurastack.ai/",
       "applicationCategory": "HealthApplication",
       "operatingSystem": "Web, iOS, Android",
       "offers": {
@@ -149,19 +149,19 @@
       "author": {
         "@type": "Organization",
         "name": "NeuraFit Team",
-        "url": "https://neurafit-ai-2025.web.app/"
+        "url": "https://neurastack.ai/"
       },
       "publisher": {
         "@type": "Organization",
         "name": "NeuraFit",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://neurafit-ai-2025.web.app/android-chrome-512x512.png",
+          "url": "https://neurastack.ai/android-chrome-512x512.png",
           "width": 512,
           "height": 512
         }
       },
-      "screenshot": "https://neurafit-ai-2025.web.app/android-chrome-512x512.png",
+      "screenshot": "https://neurastack.ai/android-chrome-512x512.png",
       "softwareVersion": "1.0.1",
       "datePublished": "2024-01-01",
       "dateModified": "2025-09-30",
@@ -175,8 +175,8 @@
         "Goal-oriented training"
       ],
       "applicationSubCategory": "Fitness & Health",
-      "downloadUrl": "https://neurafit-ai-2025.web.app/",
-      "installUrl": "https://neurafit-ai-2025.web.app/",
+      "downloadUrl": "https://neurastack.ai/",
+      "installUrl": "https://neurastack.ai/",
       "memoryRequirements": "50MB",
       "storageRequirements": "100MB"
     }
@@ -189,8 +189,8 @@
       "@type": "Organization",
       "name": "NeuraFit",
       "alternateName": "NeuraFit AI Fitness",
-      "url": "https://neurafit-ai-2025.web.app/",
-      "logo": "https://neurafit-ai-2025.web.app/android-chrome-512x512.png",
+      "url": "https://neurastack.ai/",
+      "logo": "https://neurastack.ai/android-chrome-512x512.png",
       "description": "Leading AI-powered fitness platform providing personalized workout plans and intelligent training solutions.",
       "foundingDate": "2024",
       "sameAs": [
