feat: implement performance enhancements and fix backend timeout issues
- Add scroll-to-top functionality for workout flow pages
- Implement comprehensive error handling system with retry logic
- Add request management with deduplication and caching
- Optimize React components with memoization (SmartWeightInput, ProgressiveOverloadTracker)
- Optimize Zustand store with shallow comparison
- Add offline indicator component
- Improve accessibility with enhanced ARIA attributes
- Add image optimization utilities
- Increase Cloud Function timeout to 300s and memory to 1GiB
- Improve 502 error handling with better user messages
- Remove workout preview badges (sets/reps)
- Remove documentation markdown files except CHANGELOG.md
- Add comprehensive test coverage for error handling and request management

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://js.stripe.com" crossorigin />
-    
+    <link rel="preconnect" href="https://o4508479088050176.ingest.us.sentry.io" crossorigin />
+
     <!-- DNS Prefetch: Firebase services -->
     <link rel="dns-prefetch" href="https://firebaseinstallations.googleapis.com" />
     <link rel="dns-prefetch" href="https://firestore.googleapis.com" />
     <link rel="dns-prefetch" href="https://identitytoolkit.googleapis.com" />
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
     
     <!-- Font: Inter (optimized with display=swap) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
