--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
         /* Support for iOS safe areas */
         height: 100vh;
         height: -webkit-fill-available;
+        /* Prevent horizontal scrolling */
+        overflow-x: hidden;
+        width: 100%;
       }
 
       /* Prevent overscroll bounce on iOS */
@@ -262,15 +265,20 @@
         overscroll-behavior: none;
         -webkit-overflow-scrolling: touch;
         width: 100%;
+        max-width: 100vw;
         height: 100%;
         /* Use viewport height that accounts for iOS address bar */
         min-height: 100vh;
         min-height: -webkit-fill-available;
+        /* Prevent horizontal scrolling */
+        overflow-x: hidden;
+        position: relative;
       }
 
       /* Root container with proper scrolling and safe area support */
       #root {
         width: 100%;
+        max-width: 100vw;
         min-height: 100vh;
         min-height: -webkit-fill-available;
         /* Support for iOS safe areas - add padding for notch/status bar */
@@ -278,6 +286,9 @@
         padding-bottom: env(safe-area-inset-bottom);
         padding-left: env(safe-area-inset-left);
         padding-right: env(safe-area-inset-right);
+        /* Prevent horizontal scrolling */
+        overflow-x: hidden;
+        position: relative;
       }
 
       /* Landscape warning overlay (triggered by orientation.ts utility) */
